Fixed Overview Z-index

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,7 +43,7 @@ a {
 
 header {
   position: fixed;
-  z-index: 2;
+  z-index: 100;
   width: 100%;
 }
 
@@ -204,6 +204,7 @@ main {
     }
     .item-wrapper {
       position: relative;
+      overflow: hidden;
 
       .item-overview {
         height: 100%;
@@ -212,14 +213,15 @@ main {
         position: absolute;
         top: 0;
         left: 0;
+        transform: translate3d(100%, 0, 0);
         background: lighten($primary-color, 5);
         padding: 1rem;
         border-bottom: $secondary-color 5px solid;
-        transform: scale(0, 1);
+        @include easeOut;
         overflow: hidden;
 
         &.show-overview {
-          transform: scale(1, 1);
+          transform: translate3d(0, 0, 0);
           z-index: 21;
           @include easeOut;
         }
@@ -229,12 +231,15 @@ main {
         position: absolute;
         top: 0;
         right: 10px;
-        transform: scale(0, 1);
+        transform: translate3d(100%, 0, 0);
+        visibility: hidden;
         cursor: pointer;
+        @include easeOut;
 
         &.item-overview-btn-close-show {
           @include easeOut;
-          transform: scale(1, 1);
+          visibility: visible;
+          transform: translate3d(0, 0, 0);
           z-index: 21;
 
           &:hover {
